src/objects/Pivotal_Analytic_Snapshot__c.object
<CustomObject>
    <description>Used to track week over week trends for the entire business.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Hourly_Bill_Rate__c</fullName>
        <label>Avg. Hourly Bill Rate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Science_Only_Price__c</fullName>
        <label>Data Science Only Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <label>Fiscal Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Status__c</fullName>
        <label>Forecast Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Labs_PCF_Being_Upsold__c</fullName>
        <label>Is Labs/PCF Being Upsold?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Most_Likely__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Likely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Labs_PCF_Opportunity__c</fullName>
        <label>Original Labs/PCF Opportunity</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pivotal_Labs_Delivery_Office__c</fullName>
        <label>Pivotal Labs Delivery Office</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book_Name__c</fullName>
        <label>Price Book Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Portfolio__c</fullName>
        <label>Product Portfolio</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <label>Theater</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Data_Selling_Motion__c</fullName>
        <label>Total: Data Selling Motion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labs_Attach_Amount__c</fullName>
        <label>Total: Labs Attach Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_PaaS_Selling_Motion__c</fullName>
        <label>Total: PaaS Selling Motion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pivotal_CF_Product__c</fullName>
        <label>Total: Pivotal CF Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pivotal_Labs__c</fullName>
        <label>Total: Pivotal Labs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Mesaure__c</fullName>
        <label>Unit of Mesaure</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_s__c</fullName>
        <label>Year(s)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Pivotal Analytic Snapshot</label>
    <nameField>
        <label>Pivotal Analytic Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pivotal Analytic Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>